<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSpecificRecipe">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/editTextIngredient"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/ingredient"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextImage" />

    <EditText
        android:id="@+id/editTextInstructions"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/instructions"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextDesc" />

    <EditText
        android:id="@+id/editTextVideo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/video"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstructions" />


    <EditText
        android:id="@+id/editTextImage"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/image_url"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal1" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngredient" />

    <Button
        android:id="@+id/buttonSaveItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0D0243"
        android:text="@string/add_recipe"
        android:textColor="#fdfdfd"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/editTextVideo" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#CC0202"
        android:text="@string/backward"
        android:textColor="#fdfdfd"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveItem"
        app:layout_constraintVertical_bias="0.015"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>