<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sing_up_into_account"
            android:textColor="#3A3A3A"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/UserLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/input_user_name"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#8C8C8C"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/EmailUser"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/input_email"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#8C8C8C"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/UserLogin"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/input_user_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#8C8C8C"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/EmailUser"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3A3A3A"
            android:text="@string/singup"
            android:textColor="#fdfdfd"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/UserPassword"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/linkToSingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/singin"
            android:textColor="#000000"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/buttonChangeLanguage"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonChangeLanguage"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#3A3A3A"
            android:text="@string/change_language"
            android:textColor="#fdfdfd"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/buttonReg" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="-10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>