<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".listIngredient">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textListIngredient"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/list_of_ingredient"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/Ingredient"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/ingredient"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/textListIngredient"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/videoUrl"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/video"
        android:paddingHorizontal="20dp"
        android:autoLink="web"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/Ingredient"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/buttonBackToList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#3A3A3A"
        android:text="@string/back_to_list_recipes"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toBottomOf="@+id/videoUrl"
        app:layout_constraintVertical_bias="0.924"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
